--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<canvas width="500" height="500"></canvas>
-<script src="levels.js"></script>
-<script src="game.js"></script>
+<head>
+  <link rel="stylesheet" href="main.css"></link>
+</head>
+<body>
+  <p id="levelLabel">Level: 1</p>
+  <canvas></canvas>
+  <h1 onclick="startGame()">Start Game</h1>
+  <script src="assets.js"></script>
+  <script src="app.js"></script>
+</body>
