--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <canvas></canvas>
   <h1 onclick="startGame()">Start Game</h1>
   <script src="assets.js"></script>
+  <script src="functions.js"></script>
   <script src="app.js"></script>
 </body>
