--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <link rel="stylesheet" href="main.css"></link>
 </head>
 <body>
-  <p id="levelLabel">Level: 1</p>
+  <div class="info">
+    <p id="levelLabel">LEVEL: 1</p>
+    <p id="iceLabel"></p>
+    <p id="solvedLabel">SOLVED: 0</p>
+  </div>
   <canvas></canvas>
   <h1 onclick="startGame()">Start Game</h1>
   <div class="controls">
