added new sprites

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <p id="solvedLabel">SOLVED: 0</p>
   </div>
   <canvas></canvas>
-  <h1 onclick="startGame()">Start Game</h1>
+  <div id="start">
+    <img src="assets/title.png">
+    <img class="puffle" src="assets/puffle_on_ice.png">
+    <h1 class="startButton" onclick="startGame()">START</h1>
+  </div>
   <div class="controls">
     <div>
       <div onclick="handleKeyboardInput('left')" class="left"></div>
