--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       <p id="solvedLabel">SOLVED: 0</p>
     </div>
     <canvas></canvas>
-    <div id="start">
-      <img style="display:none" src="assets/title.png">
-      <img style="display:none" class="puffle" src="assets/puffle_on_ice.png">
+    <div id="actions">
+      <h1 onclick="loadLevel()">RESET</h1>
     </div>
     <div id="controls">
       <div>
@@ -29,6 +28,8 @@
     </div>
   </div>
   <h1 id="startButton" onclick="startGame()">START</h1>
+  <img style="display:none" src="assets/title.png">
+  <img style="display:none" class="puffle" src="assets/puffle_on_ice.png">
   <script src="assets.js"></script>
   <script src="functions.js"></script>
   <script src="app.js"></script>
