modified info opacity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <canvas></canvas>
     <div id="actions">
-      <h1 onclick="loadLevel()">RESET</h1>
+      <h1 id="resetButton" onclick="loadLevel()">RESET</h1>
     </div>
     <div id="controls">
       <div>
