--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas></canvas>
     <div id="actions">
       <h1 id="resetButton" onclick="loadLevel()">RESET</h1>
+      <p id="scoreLabel">SCORE: 0</p>
     </div>
     <div id="controls">
       <div>
