--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  <title>Thin Ice</title>
+  <meta name="description" content="A remake of the Club Penguin puzzle game">
 
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#333333">
+  <meta name="theme-color" content="#333333">
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link rel="stylesheet" href="main.css"></link>
