--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="theme-color" content="#333333">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link rel="stylesheet" href="main.css"></link>
